// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertYamlProxyToObject > should convert a hysteria2 proxy object to IR 1`] = `
{
  "auth": {
    "password": "your-password",
  },
  "host": "example.com",
  "kind": "hysteria2",
  "port": 443,
  "proto": {
    "hy2": {
      "auth": undefined,
      "down": "500",
      "fast_open": undefined,
      "hop_interval": undefined,
      "obfs": undefined,
      "ports": undefined,
      "recv_window_conn": undefined,
      "up": "100",
    },
  },
  "tags": [
    "hy2-node",
  ],
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a shadowsocks proxy object to IR 1`] = `
{
  "auth": {
    "method": "aes-256-gcm",
    "password": "your-password",
  },
  "host": "example.com",
  "kind": "shadowsocks",
  "port": 8080,
  "tags": [
    "ss-node",
  ],
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a trojan proxy object to IR 1`] = `
{
  "auth": {
    "password": "your-password",
  },
  "host": "example.com",
  "kind": "trojan",
  "port": 443,
  "tags": [
    "trojan-node",
  ],
  "udp": true,
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert a vmess proxy object to IR 1`] = `
{
  "alterId": 0,
  "auth": {
    "method": "auto",
    "uuid": "your-uuid",
  },
  "ext": {
    "clash": {
      "alterId": 0,
    },
  },
  "host": "server.com",
  "kind": "vmess",
  "network": "ws",
  "port": 443,
  "tags": [
    "vmess-ws-tls",
  ],
  "tls": {
    "alpn": undefined,
    "insecure": true,
    "sni": "server.com",
  },
  "transport": {
    "headers": {
      "Host": "server.com",
    },
    "path": "/path",
    "type": "ws",
  },
  "udp": true,
  "version": "1.0.0",
}
`;

exports[`convertYamlProxyToObject > should convert an http proxy object to IR 1`] = `
{
  "auth": {
    "password": "password",
    "username": "user",
  },
  "host": "proxy.example.com",
  "kind": "http",
  "port": 8080,
  "tags": [
    "http-proxy",
  ],
  "version": "1.0.0",
}
`;
